# TalentLens

./: .gitignore  Makefile  README.md  pyproject.toml  questions.txt  requirements.txt
app/: Home.py
app/pages/: 1_Analytics.py  2_Job_Search.py  3_Ask_TalentLens.py  4_AB_Test.py
docs/: mkdocs.yml
docs/docs/: index.md  learning-journal.md  phase-0-setup.md  phase-1-eda.md  phase-2-nlp.md  phase-3-ml.md
models/bertopic_model/: config.json  topic_embeddings.safetensors  topics.json
notebooks/: 01-mp-data-loading-and-schema.ipynb  02-mp-data-cleaning.ipynb  03-mp-exploratory-data-analysis.ipynb  04-mp-nlp-text-preprocessing.ipynb  05-mp-feature-engineering.ipynb  06-mp-embeddings-and-topics.ipynb  07-mp-faiss-vector-index.ipynb  08-mp-pgvector-ingestion-and-search.ipynb  09-mp-rag-qa-ollama.ipynb  10-mp-salary-prediction.ipynb  11-mp-ghost-job-classifier.ipynb  12-mp-entry-level-paradox.ipynb  13-mp-employer-branding.ipynb
references/: data_dictionary.md
talentlens/: __init__.py  config.py  dataset.py  db.py  features.py  plots.py  rag.py  vector_index.py
tests/: test_data.py  test_features.py
