[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "talentlens"
version = "0.0.1"
description = "Job Market Analysis"
authors = [
  { name = "Mark Phouiphiphath" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"

dependencies = [
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer",
    "pandas>=2.0",
    "pyarrow",
    "numpy",
]


[tool.ruff]
line-length = 99
src = ["talentlens"]
include = ["pyproject.toml", "talentlens/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["talentlens"]
force-sort-within-sections = true

